@@ -1,2 +1,2 @@
-#define VERSION "20220723"
+#define VERSION "20230916"
 #define BUG_ADDRESS "issue@texjp.org"
